feature: endpoint para cadastro de cliente
